--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "delegate-framework",
   "version": "1.0.0",
-  "description": "A TypeScript framework for delegation patterns",
+  "description": "A TypeScript framework for building robust, production-ready blockchain workflows with comprehensive error handling, logging, and testing. Maintained by delegate.fun",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -22,11 +22,17 @@
   },
   "keywords": [
     "typescript",
-    "delegation",
-    "framework",
-    "patterns"
+    "solana",
+    "blockchain",
+    "rpc",
+    "helius",
+    "spl",
+    "error-handling",
+    "logging",
+    "testing",
+    "framework"
   ],
-  "author": "",
+  "author": "Sefi",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^29.5.8",
